20110413 man/tape2wav.1,tape2wav.c: allow writing WAV file to stdout (Fred).
20110414 tape2wav.c: allow writing WAV file to stdout on Windows (patch
         #3286205) (Sergio Baldovi).
20110427 tzxlist.c,man/tzxlist.1: add support for reading PZX files (Fred).
20110429 tzxlist.c: PZX files have archive info text as UTF-8 (Fred).
20110429 tape2wav.c: respect polarity when writing audio out (Fred).
20110501 man/profile2map.1: update my email address (Stuart).
20110514 tzxlist.c: add support for TZX set signal level block (Fred).
20110514 tape2wav.c: do a better job of respecting polarity when writing audio
         out (Fred).
20110717 tzxlist.c: print CODE header start address and length (Fred).
20111219 rzxtool.c,scl2trd.c,snap2tzx.c: fix warnings.
20120122 scl2trd.c: fix unused variable warning (Fred).
20120122 Makefile.am,compat/{getopt.[ch],getopt1.c},configure.in,fmfconv.[ch],
         fmfconv_aiff.c,fmfconv_au.c,fmfconv_ff.c,fmfconv_ppm.c,fmfconv_scr.c,
         fmfconv_wav.c,fmfconv_yuv.c,hacking/ChangeLog,man/Makefile.am,
         man/fmfconv.1,movie_tables.h: add converter tool for fmf files
         (patch #3034770) (Gergely Szasz with contributions from Sergio Baldoví
         and Fred).
20120327 configure.in: add support for audiofile 0.3.x (patch #3508658) (Alberto
         Garcia).
20120922 tapeconv.c: correct check of LIBSPECTRUM_ID_UNKNOWN (fixes bug
         #3570483) (Michael Tautschnig).
20120923 tapeconv.c: remove potential memory leak (Fred).
20121021 Makefile.am,acinclude.m4,autogen.sh,compat/amiga/Makefile.am,
         compat/unix/Makefile.am,compat/win32/Makefile.am,configure.[ac|in],
         m4/{audiofile.m4,m4/glib-1.0.m4,m4/glib-2.0.m4,m4/iconv.m4}:
         modernise autoconf support (more from patch #3575831) (Sergio).
20121026 compat/win32/osname.c,fmfconv.[ch],fmfconv_aiff.c,fmfconv_au.c,
         fmfconv_ff.c,fmfconv_ppm.c,fmfconv_scr.c,fmfconv_wav.c,fmfconv_yuv.c,
         snap2tzx.c: fix various warnings (patch #3579248) (Sergio).